# warewolf

./: .gitignore  README.md  TODO.md  app.py  main.py  populate_sequences.py  pyproject.toml  ui_test_main.py
pages/: 1_Import.py  2_Labeling.py  3_LabelStats.py
src/warewolf/data_import/: crud.py  data_loader.py  db_conn.py
src/ww/: hypno.py
tests/: crud_test.py  db_test.py  import_test.py
