[project]
name = "warewolf"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pytest",
]

# Comando CLI per eseguire main.py
[project.scripts]
clean-dataset = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest]
pythonpath = ["src"]
testpaths = ["tests"]